syntax = "proto3";

package proto.auth.v1;

option go_package = "opencampus/gen/proto/auth/v1;authv1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string type = 1;
  string expires_at = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}
message RegisterResponse {
  string type = 1;
  string expires_at = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message VerifyEmailRequest {}
message VerifyEmailResponse {}

message ResetPasswordRequest {}
message ResetPasswordResponse {}
